--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "firebase": "^8.6.8",
-    "multer": "^1.4.2"
+    "firebase-admin": "^9.10.0",
+    "multer": "^1.4.2",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
